# opencbdc-tx

./: CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
docs/: extend_runners.md  parsec_user_guide.md
scripts/: build.sh  gen_bytecode.lua  lua_bench.sh  parsec-run-local.sh  py_bench.sh  setup-dependencies.sh  wipe-parsec.sh
src/parsec/: util.cpp  util.hpp
src/parsec/agent/: CMakeLists.txt  agentd.cpp  impl.cpp  interface.hpp  server_interface.cpp  tinyagentd.cpp
src/parsec/agent/runners/: interface.hpp
src/parsec/agent/runners/evm/: http_server.cpp  impl.cpp
src/parsec/agent/runners/lua/: impl.cpp  impl.hpp  server.cpp
src/parsec/agent/runners/py/: CMakeLists.txt  impl.cpp  impl.hpp  py_server.cpp  py_server.hpp  pybuffer.cpp  pyutil.cpp
src/parsec/broker/: CMakeLists.txt  impl.cpp  impl.hpp  interface.hpp  tinybroker.cpp  tinybroker.hpp
src/parsec/directory/: impl.cpp  impl.hpp  interface.hpp
src/parsec/runtime_locking_shard/: CMakeLists.txt  client.hpp  controller.cpp  controller.hpp  impl.cpp  impl.hpp  interface.hpp  replicated_shard.cpp  replicated_shard.hpp
src/parsec/ticket_machine/: CMakeLists.txt  client.cpp
src/uhs/atomizer/archiver/: CMakeLists.txt
src/uhs/atomizer/atomizer/: CMakeLists.txt
src/uhs/atomizer/sentinel/: controller.hpp
src/uhs/atomizer/shard/: CMakeLists.txt
src/uhs/atomizer/watchtower/: CMakeLists.txt
src/uhs/client/: CMakeLists.txt  atomizer_client.hpp  client.cpp  client.hpp  twophase_client.hpp
src/uhs/transaction/: messages.cpp  transaction.cpp  transaction.hpp  validation.cpp  validation.hpp  wallet.cpp  wallet.hpp
src/uhs/twophase/locking_shard/: locking_shard.cpp
src/uhs/twophase/sentinel_2pc/: CMakeLists.txt  controller.cpp  controller.hpp
src/util/common/: blocking_queue.hpp  buffer.cpp  buffer.hpp  cache_set.hpp  keys.hpp  random_source.cpp  thread_pool.cpp
src/util/network/: connection_manager.cpp  tcp_socket.cpp
src/util/rpc/: async_server.hpp  tcp_client.hpp
src/util/rpc/http/: CMakeLists.txt  json_rpc_http_server.cpp
src/util/serialization/: format.hpp
tests/: util.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  validation_test.cpp
tests/unit/parsec/agent/runners/lua/: account_test.cpp  gen_pay_contract.lua
tests/unit/sentinel_2pc/: controller_test.cpp
tools/bench/: CMakeLists.txt  twophase_gen.cpp
tools/bench/parsec/evm/: CMakeLists.txt
tools/bench/parsec/lua/: CMakeLists.txt  lua_bench.cpp  wallet.cpp  wallet.hpp
tools/bench/parsec/py/: CMakeLists.txt  py_bench.cpp  wallet.cpp  wallet.hpp
tools/shard-seeder/: shard-seeder.cpp
